Fix images going out of bounds in renderer

--- a/src/renderer/style.css
+++ b/src/renderer/style.css
@@ -206,9 +206,14 @@ body {
   margin-top: 8px;
 }
 
-.message .thumbnail img {
-  max-height: 320px;
+.message .thumbnail {
   max-width: calc(100% - 20px);
+  max-height: 320px;
+}
+
+.message .thumbnail img {
+  max-width: 100%;
+  max-height: 320px;
   border-radius: 3px;
 }
 
